# adventofcode-2022

./: .gitignore  Cargo.toml  README.md  build.sh  esy.json  import-map.json  package-lock.json  package.json  requirements.txt
.github/workflows/: lint.yaml  main.yaml  main.yml
day-01/input/: bebert.txt  didip.txt  paullgdc.txt
day-01/part-1/: axelc.java  ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  eriadrim.go  evqna.go  frenki.py  giltho.zig  jd.rs  jon.py  julesd.py  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  troisdiz.go  youyoun.jl
day-01/part-2/: axelc.java  ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  eriadrim.go  evqna.go  frenki.py  giltho.zig  jd.rs  jon.py  julesd.py  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  troisdiz.go  youyoun.jl
day-02/input/: corendos.txt  didip.txt  eriadrim.txt  evqna.txt  jd.txt  youyoun.txt
day-02/part-1/: ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  eriadrim.go  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  troisdiz.go  youyoun.jl
day-02/part-2/: ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  eriadrim.go  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  troisdiz.go  youyoun.jl
day-03/input/: corendos.txt  evqna.txt  paullgdc.txt  youyoun.txt
day-03/part-1/: ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  eriadrim.go  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-03/part-2/: ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  eriadrim.go  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-04/input/: badouralix.txt  giltho.txt  jd.txt  silvestre.txt  youyoun.txt
day-04/part-1/: ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-04/part-2/: ayc0.ts  badouralix.rs  bebert.py  corendos.zig  david.py  didip.py  enizor.rs  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-05/input/: ayc0.txt  corendos.txt  didip.txt  lelithium.txt  paullgdc.txt  remicalixte.txt  skasch.txt  youyoun.txt
day-05/part-1/: ayc0.ts  badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-05/part-2/: ayc0.ts  badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  evqna.go  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-06/input/: ayc0.txt  silvestre.txt
day-06/part-1/: ayc0.ts  badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  evqna.go  frenki.py  giltho.zig  jd.rs  julesd.py  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-06/part-2/: ayc0.ts  badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  evqna.go  frenki.py  giltho.zig  jd.rs  julesd.py  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-07/input/: corendos.txt  frenki.txt
day-07/part-1/: ayc0.ts  badouralix.go  badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  giltho.rs  jd.rs  jon.py  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.py  thomren.rs  youyoun.jl
day-07/part-2/: ayc0.ts  badouralix.go  badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  giltho.rs  jd.rs  jon.py  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.py  thomren.rs  youyoun.jl
day-08/input/: corendos.txt
day-08/part-1/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-08/part-2/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  giltho.zig  jd.rs  lelithium.zig  paullgdc.rs  remicalixte.py  silvestre.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-09/input/: frenki.txt  paullgdc.txt  thomren.txt  youyoun.txt
day-09/part-1/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  jd.rs  paullgdc.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-09/part-2/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  jd.rs  paullgdc.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-10/: parser-2.py
day-10/input/: corendos.txt  thomren.txt  youyoun.txt
day-10/part-1/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  jd.rs  jon.py  paullgdc.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-10/part-2/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  frenki.py  jd.rs  jon.py  paullgdc.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.jl
day-11/input/: jd.txt  youyoun.txt
day-11/part-1/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  jd.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.py
day-11/part-2/: badouralix.rs  corendos.zig  david.py  didip.py  enizor.rs  jd.rs  remicalixte.py  skasch.cpp  th-ch.py  thomren.rs  youyoun.py
lib/: aoc.rs
lib/rust/: lib.rs
rust_lib/: lib.rs
tool/: AOC.py  config.py  create.py  discovery.py  distribution.py  run.py
ts_lib/: iterate.test.ts
(+207 files in other folders)
