[package]
name = "adventofcode-2022"
version = "0.1.0"
authors = []
rust-version = "1.62"
edition="2021"

[dependencies]

[lib]
name = "aoc"
path = "./rust_lib/lib.rs"

[[bin]]
name = "day-01-part-1-badouralix"
path = "./day-01/part-1/badouralix.rs"

[[bin]]
name = "day-01-part-2-badouralix"
path = "./day-01/part-2/badouralix.rs"

[[bin]]
name = "day-01-part-1-paullgdc"
path = "./day-01/part-1/paullgdc.rs"

[[bin]]
name = "day-01-part-2-paullgdc"
path = "./day-01/part-2/paullgdc.rs"

[[bin]]
name = "day-01-part-1-thomren"
path = "./day-01/part-1/thomren.rs"

[[bin]]
name = "day-01-part-2-thomren"
path = "./day-01/part-2/thomren.rs"

[[bin]]
name = "day-01-part-1-jd"
path = "./day-01/part-1/jd.rs"

[[bin]]
name = "day-01-part-2-jd"
path = "./day-01/part-2/jd.rs"
[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-paullgdc"
path = "./day-02/part-1/paullgdc.rs"

[[bin]]
name = "day-02-part-2-paullgdc"
path = "./day-02/part-2/paullgdc.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"
