[package]
name = "adventofcode-2022"
version = "0.1.0"
authors = []
rust-version = "1.62"
edition="2021"

[dependencies]

[lib]
name = "aoc"
path = "./lib/rust/lib.rs"

[[bin]]
name = "day-01-part-1-badouralix"
path = "./day-01/part-1/badouralix.rs"

[[bin]]
name = "day-01-part-2-badouralix"
path = "./day-01/part-2/badouralix.rs"

[[bin]]
name = "day-01-part-1-paullgdc"
path = "./day-01/part-1/paullgdc.rs"

[[bin]]
name = "day-01-part-2-paullgdc"
path = "./day-01/part-2/paullgdc.rs"

[[bin]]
name = "day-01-part-1-thomren"
path = "./day-01/part-1/thomren.rs"

[[bin]]
name = "day-01-part-2-thomren"
path = "./day-01/part-2/thomren.rs"

[[bin]]
name = "day-02-part-1-thomren"
path = "./day-02/part-1/thomren.rs"

[[bin]]
name = "day-02-part-2-thomren"
path = "./day-02/part-2/thomren.rs"

[[bin]]
name = "day-03-part-1-thomren"
path = "./day-03/part-1/thomren.rs"

[[bin]]
name = "day-03-part-2-thomren"
path = "./day-03/part-2/thomren.rs"

[[bin]]
name = "day-04-part-1-thomren"
path = "./day-04/part-1/thomren.rs"

[[bin]]
name = "day-04-part-2-thomren"
path = "./day-04/part-2/thomren.rs"

[[bin]]
name = "day-05-part-1-thomren"
path = "./day-05/part-1/thomren.rs"

[[bin]]
name = "day-05-part-2-thomren"
path = "./day-05/part-2/thomren.rs"

[[bin]]
name = "day-12-part-1-thomren"
path = "./day-12/part-1/thomren.rs"

[[bin]]
name = "day-12-part-2-thomren"
path = "./day-12/part-2/thomren.rs"

[[bin]]
name = "day-06-part-1-thomren"
path = "./day-06/part-1/thomren.rs"

[[bin]]
name = "day-06-part-2-thomren"
path = "./day-06/part-2/thomren.rs"

[[bin]]
name = "day-07-part-1-thomren"
path = "./day-07/part-1/thomren.rs"

[[bin]]
name = "day-07-part-2-thomren"
path = "./day-07/part-2/thomren.rs"

[[bin]]
name = "day-08-part-1-thomren"
path = "./day-08/part-1/thomren.rs"

[[bin]]
name = "day-08-part-2-thomren"
path = "./day-08/part-2/thomren.rs"

[[bin]]
name = "day-11-part-1-thomren"
path = "./day-11/part-1/thomren.rs"

[[bin]]
name = "day-11-part-2-thomren"
path = "./day-11/part-2/thomren.rs"

[[bin]]
name = "day-09-part-1-thomren"
path = "./day-09/part-1/thomren.rs"

[[bin]]
name = "day-09-part-2-thomren"
path = "./day-09/part-2/thomren.rs"

[[bin]]
name = "day-10-part-1-thomren"
path = "./day-10/part-1/thomren.rs"

[[bin]]
name = "day-10-part-2-thomren"
path = "./day-10/part-2/thomren.rs"

[[bin]]
name = "day-13-part-1-thomren"
path = "./day-13/part-1/thomren.rs"

[[bin]]
name = "day-13-part-2-thomren"
path = "./day-13/part-2/thomren.rs"

[[bin]]
name = "day-01-part-1-jd"
path = "./day-01/part-1/jd.rs"

[[bin]]
name = "day-01-part-2-jd"
path = "./day-01/part-2/jd.rs"
[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-paullgdc"
path = "./day-02/part-1/paullgdc.rs"

[[bin]]
name = "day-02-part-2-paullgdc"
path = "./day-02/part-2/paullgdc.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-badouralix"
path = "./day-02/part-1/badouralix.rs"

[[bin]]
name = "day-02-part-2-badouralix"
path = "./day-02/part-2/badouralix.rs"

[[bin]]
name = "day-03-part-1-enizor"
path = "./day-03/part-1/enizor.rs"

[[bin]]
name = "day-03-part-2-enizor"
path = "./day-03/part-2/enizor.rs"

[[bin]]
name = "day-03-part-1-badouralix"
path = "./day-03/part-1/badouralix.rs"

[[bin]]
name = "day-03-part-2-badouralix"
path = "./day-03/part-2/badouralix.rs"

[[bin]]
name = "day-02-part-1-jd"
path = "./day-02/part-1/jd.rs"

[[bin]]
name = "day-02-part-2-jd"
path = "./day-02/part-2/jd.rs"

[[bin]]
name = "day-03-part-1-paullgdc"
path = "./day-03/part-1/paullgdc.rs"

[[bin]]
name = "day-03-part-2-paullgdc"
path = "./day-03/part-2/paullgdc.rs"

[[bin]]
name = "day-03-part-1-jd"
path = "./day-03/part-1/jd.rs"

[[bin]]
name = "day-03-part-2-jd"
path = "./day-03/part-2/jd.rs"

[[bin]]
name = "day-04-part-1-enizor"
path = "./day-04/part-1/enizor.rs"

[[bin]]
name = "day-04-part-2-enizor"
path = "./day-04/part-2/enizor.rs"

[[bin]]
name = "day-04-part-1-badouralix"
path = "./day-04/part-1/badouralix.rs"

[[bin]]
name = "day-04-part-2-badouralix"
path = "./day-04/part-2/badouralix.rs"

[[bin]]
name = "day-04-part-1-paullgdc"
path = "./day-04/part-1/paullgdc.rs"

[[bin]]
name = "day-04-part-2-paullgdc"
path = "./day-04/part-2/paullgdc.rs"

[[bin]]
name = "day-04-part-1-jd"
path = "./day-04/part-1/jd.rs"

[[bin]]
name = "day-04-part-2-jd"
path = "./day-04/part-2/jd.rs"

[[bin]]
name = "day-05-part-1-paullgdc"
path = "./day-05/part-1/paullgdc.rs"

[[bin]]
name = "day-05-part-2-paullgdc"
path = "./day-05/part-2/paullgdc.rs"

[[bin]]
name = "day-05-part-1-enizor"
path = "./day-05/part-1/enizor.rs"

[[bin]]
name = "day-05-part-2-enizor"
path = "./day-05/part-2/enizor.rs"

[[bin]]
name = "day-05-part-1-jd"
path = "./day-05/part-1/jd.rs"

[[bin]]
name = "day-05-part-2-jd"
path = "./day-05/part-2/jd.rs"

[[bin]]
name = "day-05-part-1-badouralix"
path = "./day-05/part-1/badouralix.rs"

[[bin]]
name = "day-05-part-2-badouralix"
path = "./day-05/part-2/badouralix.rs"

[[bin]]
name = "day-06-part-1-paullgdc"
path = "./day-06/part-1/paullgdc.rs"

[[bin]]
name = "day-06-part-2-paullgdc"
path = "./day-06/part-2/paullgdc.rs"

[[bin]]
name = "day-06-part-1-jd"
path = "./day-06/part-1/jd.rs"

[[bin]]
name = "day-06-part-2-jd"
path = "./day-06/part-2/jd.rs"

[[bin]]
name = "day-06-part-1-enizor"
path = "./day-06/part-1/enizor.rs"

[[bin]]
name = "day-06-part-2-enizor"
path = "./day-06/part-2/enizor.rs"

[[bin]]
name = "day-06-part-1-badouralix"
path = "./day-06/part-1/badouralix.rs"

[[bin]]
name = "day-06-part-2-badouralix"
path = "./day-06/part-2/badouralix.rs"

[[bin]]
name = "day-07-part-1-giltho"
path = "./day-07/part-1/giltho.rs"

[[bin]]
name = "day-07-part-2-giltho"
path = "./day-07/part-2/giltho.rs"

[[bin]]
name = "day-07-part-1-enizor"
path = "./day-07/part-1/enizor.rs"

[[bin]]
name = "day-07-part-2-enizor"
path = "./day-07/part-2/enizor.rs"

[[bin]]
name = "day-07-part-1-paullgdc"
path = "./day-07/part-1/paullgdc.rs"

[[bin]]
name = "day-07-part-2-paullgdc"
path = "./day-07/part-2/paullgdc.rs"

[[bin]]
name = "day-07-part-1-jd"
path = "./day-07/part-1/jd.rs"

[[bin]]
name = "day-07-part-2-jd"
path = "./day-07/part-2/jd.rs"

[[bin]]
name = "day-08-part-1-enizor"
path = "./day-08/part-1/enizor.rs"

[[bin]]
name = "day-08-part-2-enizor"
path = "./day-08/part-2/enizor.rs"

[[bin]]
name = "day-08-part-1-jd"
path = "./day-08/part-1/jd.rs"

[[bin]]
name = "day-08-part-2-jd"
path = "./day-08/part-2/jd.rs"

[[bin]]
name = "day-08-part-1-badouralix"
path = "./day-08/part-1/badouralix.rs"

[[bin]]
name = "day-08-part-2-badouralix"
path = "./day-08/part-2/badouralix.rs"

[[bin]]
name = "day-08-part-1-paullgdc"
path = "./day-08/part-1/paullgdc.rs"

[[bin]]
name = "day-08-part-2-paullgdc"
path = "./day-08/part-2/paullgdc.rs"

[[bin]]
name = "day-09-part-1-paullgdc"
path = "./day-09/part-1/paullgdc.rs"

[[bin]]
name = "day-09-part-2-paullgdc"
path = "./day-09/part-2/paullgdc.rs"

[[bin]]
name = "day-09-part-1-enizor"
path = "./day-09/part-1/enizor.rs"

[[bin]]
name = "day-09-part-2-enizor"
path = "./day-09/part-2/enizor.rs"

[[bin]]
name = "day-09-part-1-badouralix"
path = "./day-09/part-1/badouralix.rs"

[[bin]]
name = "day-09-part-2-badouralix"
path = "./day-09/part-2/badouralix.rs"

[[bin]]
name = "day-10-part-1-enizor"
path = "./day-10/part-1/enizor.rs"

[[bin]]
name = "day-10-part-2-enizor"
path = "./day-10/part-2/enizor.rs"

[[bin]]
name = "day-10-part-1-badouralix"
path = "./day-10/part-1/badouralix.rs"

[[bin]]
name = "day-10-part-2-badouralix"
path = "./day-10/part-2/badouralix.rs"

[[bin]]
name = "day-10-part-1-paullgdc"
path = "./day-10/part-1/paullgdc.rs"

[[bin]]
name = "day-10-part-2-paullgdc"
path = "./day-10/part-2/paullgdc.rs"

[[bin]]
name = "day-11-part-1-enizor"
path = "./day-11/part-1/enizor.rs"

[[bin]]
name = "day-11-part-2-enizor"
path = "./day-11/part-2/enizor.rs"

[[bin]]
name = "day-11-part-1-badouralix"
path = "./day-11/part-1/badouralix.rs"

[[bin]]
name = "day-11-part-2-badouralix"
path = "./day-11/part-2/badouralix.rs"

[[bin]]
name = "day-10-part-1-jd"
path = "./day-10/part-1/jd.rs"

[[bin]]
name = "day-10-part-2-jd"
path = "./day-10/part-2/jd.rs"

[[bin]]
name = "day-11-part-1-jd"
path = "./day-11/part-1/jd.rs"

[[bin]]
name = "day-11-part-2-jd"
path = "./day-11/part-2/jd.rs"

[[bin]]
name = "day-12-part-1-paullgdc"
path = "./day-12/part-1/paullgdc.rs"

[[bin]]
name = "day-12-part-2-paullgdc"
path = "./day-12/part-2/paullgdc.rs"

[[bin]]
name = "day-12-part-1-enizor"
path = "./day-12/part-1/enizor.rs"

[[bin]]
name = "day-12-part-2-enizor"
path = "./day-12/part-2/enizor.rs"

[[bin]]
name = "day-12-part-1-badouralix"
path = "./day-12/part-1/badouralix.rs"

[[bin]]
name = "day-12-part-2-badouralix"
path = "./day-12/part-2/badouralix.rs"

[[bin]]
name = "day-13-part-1-enizor"
path = "./day-13/part-1/enizor.rs"

[[bin]]
name = "day-13-part-2-enizor"
path = "./day-13/part-2/enizor.rs"

[[bin]]
name = "day-13-part-1-badouralix"
path = "./day-13/part-1/badouralix.rs"

[[bin]]
name = "day-13-part-2-badouralix"
path = "./day-13/part-2/badouralix.rs"

[[bin]]
name = "day-13-part-1-paullgdc"
path = "./day-13/part-1/paullgdc.rs"

[[bin]]
name = "day-13-part-2-paullgdc"
path = "./day-13/part-2/paullgdc.rs"

[[bin]]
name = "day-14-part-1-enizor"
path = "./day-14/part-1/enizor.rs"

[[bin]]
name = "day-14-part-2-enizor"
path = "./day-14/part-2/enizor.rs"

[[bin]]
name = "day-14-part-1-badouralix"
path = "./day-14/part-1/badouralix.rs"

[[bin]]
name = "day-14-part-2-badouralix"
path = "./day-14/part-2/badouralix.rs"
